# nornir

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  adpnode.hpp  contact.html  description.html  download.html  enumutils.hpp  farm.hpp  index.html  install.html  manager.hpp  node.hpp  nornir.files  nornir.includes  parallel_for.hpp  parallel_for_internals.hpp  parameters.hpp  params.json  predictors.hpp  predictors_impl.hpp  utils.hpp
demo/: Makefile  application_external.cpp  application_instrumented.cpp  demo-farm-new.cpp  demo-farm-sendout.cpp  demo-farm.cpp  demo-farm.xml  demo-fastflow.cpp  demo-parfor.cpp  demo-parfor2.cpp  farm.cpp  farm_accelerator_1.cpp  farm_accelerator_2.cpp  farm_accelerator_3.cpp  farm_accelerator_4.cpp  farm_ffcompat.cpp  farm_ffcompat_new_api.cpp  parallel_for.cpp  parameters.xml  pipe_ffcompat.cpp  simulator.cpp
examples/: Makefile  collect.py  collect.sh  intelpowercapdisable.sh  intelpowercapenable.sh  overhead.py  power_gov  run.sh  runreconf.py  storeresults.sh
examples/qt-mandelbrot/: CMakeLists.txt  Makefile  mandelbrot.pro  moc_mandelbrotwidget.cpp  moc_renderthread.cpp  renderthread.cpp
microbench/: Makefile  check.cpp  runmicrobenchs.sh  ticksPerNs.cpp
src/: Makefile  buildlib.ar  configuration.cpp  configuration.hpp  explorers.cpp  explorers.hpp  ffincs.hpp  instrumenter.cpp  instrumenter.h  instrumenter.hpp  interface.cpp  interface.hpp  knob.cpp  knob.hpp  manager-multi.cpp  manager-multi.hpp  manager.cpp  manager.hpp  manager.tpp  monitor.cpp  monitor.hpp  node.cpp  node.hpp  nornir.h  nornir.hpp  (+12 more)
(+6475 files in other folders)
